<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:paddingVertical="8dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginVertical="5dp"
                android:gravity="start"
                android:text="@string/commodity"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/commodity_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginVertical="5dp"
                android:gravity="start"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginVertical="5dp"
                android:gravity="start"
                android:text="@string/truck_type"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/truck_type_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginVertical="5dp"
                android:gravity="start"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginVertical="5dp"
                android:gravity="start"
                android:text="@string/bids"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bids_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginVertical="5dp"
                android:gravity="start"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginVertical="5dp"
                android:gravity="start"
                android:text="@string/price"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginVertical="5dp"
                android:gravity="start"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginVertical="5dp"
                android:gravity="start"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/address_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginVertical="5dp"
                android:gravity="start"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toEndOf="@+id/product_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>